Added Different Pages

--- a/Y13TPIWebproject/Pages/Technology.cshtml
+++ b/Y13TPIWebproject/Pages/Technology.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
-@model IndexModel
+@model Y13TPIWebproject.Pages.TechnologyModel
 @{
-    ViewData["Title"] = "Home";
+    ViewData["Title"] = "Technology Products";
 }
 
 <div class="text-center">
