--- a/Y13TPIWebproject/Pages/Toys.cshtml
+++ b/Y13TPIWebproject/Pages/Toys.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
-@model IndexModel
+@model Y13TPIWebproject.Pages.Index1Model
 @{
-    ViewData["Title"] = "Home";
+    ViewData["Title"] = "Toy Products";
 }
 
 <div class="text-center">
