--- a/Y13TPIWebproject/Pages/Stationary.cshtml
+++ b/Y13TPIWebproject/Pages/Stationary.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
-@model IndexModel
+@model Y13TPIWebproject.Pages.Shared.IndexModel
 @{
-    ViewData["Title"] = "Home";
+    ViewData["Title"] = "Stationary Products";
 }
 
 <div class="text-center">
