--- a/Y13TPIWebproject/Pages/Index.cshtml
+++ b/Y13TPIWebproject/Pages/Index.cshtml
@@ -4,6 +4,26 @@
     ViewData["Title"] = "Home";
 }
 
+<style>body { 
+  background: url() no-repeat center center fixed; 
+  background-size: cover;
+
+}</style>
+
 <div class="text-center">
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
     <h1 class="display-4">Quality and Affordable Products</h1>
 </div>
