--- a/Y13TPIWebproject/Pages/Index.cshtml
+++ b/Y13TPIWebproject/Pages/Index.cshtml
@@ -4,11 +4,14 @@
     ViewData["Title"] = "Home";
 }
 
-<style>body { 
-  background: url() no-repeat center center fixed; 
+<style>
+body {
+  background-image: url('../Images/background.jpeg');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
   background-size: cover;
-
-}</style>
+}
+</style>
 
 <div class="text-center">
     <br />
@@ -25,5 +28,50 @@
     <br />
     <br />
     <br />
+    <br />
     <h1 class="display-4">Quality and Affordable Products</h1>
+</div>
+<div>
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />  
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br /> 
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
 </div>
