--- a/Y13TPIWebproject/Pages/Privacy.cshtml
+++ b/Y13TPIWebproject/Pages/Privacy.cshtml
@@ -6,3 +6,5 @@
 <h1>@ViewData["Title"]</h1>
 
 <p>Use this page to detail your site's privacy policy.</p>
+
+<a href="https://create.vista.com/unlimited/stock-photos/151410424/stock-photo-keyboard-with-office-supplies-and/">Photo Top view of keyboard with office supplies and smartphone on table top. computer mouse top view created by IgorTishenko</a>
