--- a/Y13TPIWebproject/Pages/Index.cshtml
+++ b/Y13TPIWebproject/Pages/Index.cshtml
@@ -4,16 +4,26 @@
     ViewData["Title"] = "Home";
 }
 
-<style>
-body {
-  background-image: url('../Images/background.jpeg');
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: cover;
-}
-</style>
 
-<div class="text-center">
+<body> 
+<div class="container-fluid mainpagefirstpage text-center"> 
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+        <br />
+    <br />
+    <br />    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+        <h1 class="display-4"><strong>Quality and Affordable Products</strong></h1>
     <br />
     <br />
     <br />
@@ -23,14 +33,26 @@ body {
     <br />
     <br />
     <br />
+        <br />
     <br />
     <br />
     <br />
     <br />
     <br />
     <br />
-    <h1 class="display-4">Quality and Affordable Products</h1>
+    <br />
+    <br />
+        <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
 </div>
+
 <div>
     <br />
     <br />
@@ -75,3 +97,6 @@ body {
     <br />
     <br />
 </div>
+</body>
+
+
