--- a/Y13TPIWebproject/Pages/Technology.cshtml
+++ b/Y13TPIWebproject/Pages/Technology.cshtml
@@ -4,6 +4,7 @@
     ViewData["Title"] = "Technology Products";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Quality and Affordable Products</h1>
-</div>
+<div class="container-fluid">
+        <main role="main" class="pb-3">
+        </main>
+    </div>
