--- a/Y13TPIWebproject/Pages/Toys.cshtml
+++ b/Y13TPIWebproject/Pages/Toys.cshtml
@@ -3,6 +3,10 @@
 @{
     ViewData["Title"] = "Toy Products";
 }
+<div class="container-fluid">
+        <main role="main" class="pb-3">
+        </main>
+    </div>
 
 <div class="text-center">
     <h1 class="display-4">Quality and Affordable Products</h1>
