Added blur to scroll pages/scroll snap/centred slogan

--- a/Y13TPIWebproject/Pages/Shared/_Layout.cshtml
+++ b/Y13TPIWebproject/Pages/Shared/_Layout.cshtml
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Y13TPIWebproject.styles.css" asp-append-version="true" />
 </head>
-<body>
-    <header>
+<body class="scrollsnap">
+    <header class="sectionnavbar">
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow">
             <div class="container-fluid">
                 <a class="navbar-brand" asp-area="" asp-page="/Index">DuJia Imports</a>
