--- a/Y13TPIWebproject/Pages/Index.cshtml
+++ b/Y13TPIWebproject/Pages/Index.cshtml
@@ -6,97 +6,60 @@
 
 
 <body> 
-<div class="container-fluid mainpagefirstpage text-center"> 
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-        <br />
-    <br />
-    <br />    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-        <h1 class="display-4"><strong>Quality and Affordable Products</strong></h1>
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-        <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-        <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-</div>
-
-<div>
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />  
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br /> 
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-</div>
+    <div class="mainpagefirstpage"> 
+        <section>
+            <div class="slogan">
+                <h1 class="display-4"><strong>Quality and Affordable Products</strong></h1>
+            </div>
+  
+      </section>
+          <section>
+            <div class="backgroundblur section">
+                <div class="container mainpagerestpage">
+                    <br />
+                     <br />
+                      <br />
+                       <br />
+                        <br />
+                         <br />
+                          <br />
+                               <br />
+                     <br />
+                      <br />
+                       <br />
+                        <br />
+                         <br />
+                          <br />
+                           <br />
+                                <br />
+                     <br />
+                      <br />
+                       <br />
+                        <br />
+                         <br />
+                          <br />
+                           <br />
+                                <br />
+                     <br />
+                      <br />
+                       <br />
+                        <br />
+                                     <br />
+                     <br />
+                      <br />
+                       <br />
+                        <br />
+                                     <br />
+                     <br />
+                      <br />
+                       <br />
+                        <br />
+                      <br />
+                       <br />
+                </div>
+            </div>
+          </section>
+    </div>
 </body>
 
 
