--- a/Y13TPIWebproject/Pages/Shared/_Layout.cshtml
+++ b/Y13TPIWebproject/Pages/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
     <header class="sectionnavbar">
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-page="/Index">DuJia Imports</a>
+                <a class="navbar-brand" asp-area="" asp-page="/Index"><img src="" alt="DuJia Imports" style="width:100px;height:50px;"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
