--- a/Y13TPIWebproject/wwwroot/css/site.css
+++ b/Y13TPIWebproject/wwwroot/css/site.css
@@ -43,7 +43,8 @@ body {
     scroll-snap-align: start;
 }
 section {
-    height: 100vh;
+    min-height: 100vh;
+    height: auto;
     width: 100vw;
     scroll-snap-align: start;
 }
