Added page 2 for mainpage / darker background blur for page 2

--- a/Y13TPIWebproject/Pages/Index.cshtml
+++ b/Y13TPIWebproject/Pages/Index.cshtml
@@ -13,52 +13,22 @@
             </div>
   
       </section>
-          <section>
-            <div class="backgroundblur section">
-                <div class="container mainpagerestpage">
-                    <br />
-                     <br />
-                      <br />
-                       <br />
-                        <br />
-                         <br />
-                          <br />
-                               <br />
-                     <br />
-                      <br />
-                       <br />
-                        <br />
-                         <br />
-                          <br />
-                           <br />
-                                <br />
-                     <br />
-                      <br />
-                       <br />
-                        <br />
-                         <br />
-                          <br />
-                           <br />
-                                <br />
-                     <br />
-                      <br />
-                       <br />
-                        <br />
-                                     <br />
-                     <br />
-                      <br />
-                       <br />
-                        <br />
-                                     <br />
-                     <br />
-                      <br />
-                       <br />
-                        <br />
-                      <br />
-                       <br />
-                </div>
+      
+     <div class="backgroundblur2">
+         <section class="container mainpagestationary">
+            
+                   
+            
+         </section>
+      </div>
+      <div class="backgroundblur3">
+         <section>
+
+            <div class="container">
             </div>
-          </section>
+         </section>
+      </div>
+  
     </div>
 </body>
 
