--- a/Y13TPIWebproject/Pages/Privacy.cshtml
+++ b/Y13TPIWebproject/Pages/Privacy.cshtml
@@ -7,4 +7,9 @@
 
 <p>Use this page to detail your site's privacy policy.</p>
 
+
+
+
+
+<a href="https://create.vista.com/unlimited/stock-photos/164806760/stock-photo-composition-of-school-supplies/">Photo Composition of orange and blue school supplies created by VadimVasenin</a>
 <a href="https://create.vista.com/unlimited/stock-photos/151410424/stock-photo-keyboard-with-office-supplies-and/">Photo Top view of keyboard with office supplies and smartphone on table top. computer mouse top view created by IgorTishenko</a>
