--- a/Y13TPIWebproject/wwwroot/css/site.css
+++ b/Y13TPIWebproject/wwwroot/css/site.css
@@ -1,5 +1,8 @@
 html {
-  font-size: 14px;
+    font-size: 14px;
+    position: relative;
+    min-height: 100%;
+    scroll-snap-type: y mandatory;
 }
 
 @media (min-width: 768px) {
@@ -8,12 +11,6 @@ html {
   }
 }
 
-html {
-    position: relative;
-    min-height: 100%;
-    scroll-snap-type: y mandatory;
-
-}
 
 body {
   margin-bottom: 60px;
@@ -32,7 +29,16 @@ body {
 }
 
 .backgroundblur {
-    backdrop-filter: blur(20px)
+    backdrop-filter: blur(5px);
+}
+
+.backgroundblur2 {
+    backdrop-filter: blur(20px);
+    backdrop-filter: brightness(50%);
+}
+
+.backgroundblur3 {
+    backdrop-filter: blur(20px);
 }
 
 .scrollsnap {
@@ -53,4 +59,12 @@ section {
     position: relative;
     text-align:center;
     top: 40vh;
+}
+
+.mainpagestationary {
+    background-image: url('../Images/stationaryimg1stpage2.jpeg');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-attachment: scroll;
+    background-size: cover;
 }
