--- a/Y13TPIWebproject/Pages/Index.cshtml
+++ b/Y13TPIWebproject/Pages/Index.cshtml
@@ -14,9 +14,12 @@
   
       </section>
       
-     <div class="backgroundblur2">
+     <div class="backgroundblur2 backgroundbrightness">
          <section class="container mainpagestationary">
-            
+
+            <div>
+                <h2 class="text-center">The best value stationary products for all your needs</h2>
+            </div>
                    
             
          </section>
