--- a/Y13TPIWebproject/wwwroot/css/site.css
+++ b/Y13TPIWebproject/wwwroot/css/site.css
@@ -33,8 +33,7 @@ body {
 }
 
 .backgroundblur2 {
-    backdrop-filter: blur(20px);
-    backdrop-filter: brightness(50%);
+    backdrop-filter: blur(20px) brightness(50%);
 }
 
 .backgroundblur3 {
