--- a/Y13TPIWebproject/Pages/Index.cshtml
+++ b/Y13TPIWebproject/Pages/Index.cshtml
@@ -19,14 +19,22 @@
 
             <div>
                 <h2 class="text-center">The best value stationary products for all your needs</h2>
+                  <a class="btn btn-outline-secondary btn-lg button" asp-area="" asp-page="/Stationary">Go To Stationary</a>
             </div>
                    
             
          </section>
       </div>
+
       <div class="backgroundblur3">
          <section>
+            <div class="container">
+            </div>
+         </section>    
+      </div>
 
+      <div class="backgroundblur3">
+         <section>
             <div class="container">
             </div>
          </section>
