Added index toys page / removed technology page

--- a/Y13TPIWebproject/Pages/Index.cshtml
+++ b/Y13TPIWebproject/Pages/Index.cshtml
@@ -17,28 +17,28 @@
      <div class="backgroundblur2 backgroundbrightness">
          <section class="container mainpagestationary">
 
-            <div>
-                <h2 class="text-center">The best value stationary products for all your needs</h2>
-                  <a class="btn btn-outline-secondary btn-lg button" asp-area="" asp-page="/Stationary">Go To Stationary</a>
+            <div class="bg-text">
+                <h2>The best value stationary products for all your needs</h2>
+                
             </div>
-                   
+                <a class="btn btn-outline-secondary btn-lg button backgroundblur2" asp-area="" asp-page="/Stationary">Go To Stationary</a> 
             
          </section>
       </div>
 
       <div class="backgroundblur3">
-         <section>
+         <section class="container mainpagetoys">
             <div class="container">
+                <div class="bg-text">
+                <h2>The best value toys for all your needs</h2>
+                
+            </div>
+                <a class="btn btn-outline-secondary btn-lg button backgroundblur3" asp-area="" asp-page="/Toys">Go To Toys</a> 
             </div>
          </section>    
       </div>
-
-      <div class="backgroundblur3">
-         <section>
-            <div class="container">
-            </div>
-         </section>
-      </div>
+      
+   
   
     </div>
 </body>
