--- a/Y13TPIWebproject/Pages/Privacy.cshtml
+++ b/Y13TPIWebproject/Pages/Privacy.cshtml
@@ -13,3 +13,4 @@
 <a href="https://create.vista.com/unlimited/stock-photos/147054583/stock-photo-organized-office-supplies/">Photo Flat lay of black office supplies, notepad, smartwatch and pencils on black blueprint created by DimaBaranow</a>
 <a href="https://create.vista.com/unlimited/stock-photos/164806760/stock-photo-composition-of-school-supplies/">Photo Composition of orange and blue school supplies created by VadimVasenin</a>
 <a href="https://create.vista.com/unlimited/stock-photos/151410424/stock-photo-keyboard-with-office-supplies-and/">Photo Top view of keyboard with office supplies and smartphone on table top. computer mouse top view created by IgorTishenko</a>
+Photo by Karolina Grabowska: https://www.pexels.com/photo/pink-bear-plush-toy-on-white-bed-4887156/
