--- a/Y13TPIWebproject/Pages/Toys.cshtml
+++ b/Y13TPIWebproject/Pages/Toys.cshtml
@@ -1,13 +1,10 @@
 ﻿@page
-@model Y13TPIWebproject.Pages.Index1Model
+@model Y13TPIWebproject.Pages.TechnologyModel
 @{
-    ViewData["Title"] = "Toy Products";
+    ViewData["Title"] = "Technology Products";
 }
+
 <div class="container-fluid">
         <main role="main" class="pb-3">
         </main>
     </div>
-
-<div class="text-center">
-    <h1 class="display-4">Quality and Affordable Products</h1>
-</div>
