--- a/Y13TPIWebproject/Pages/Index.cshtml
+++ b/Y13TPIWebproject/Pages/Index.cshtml
@@ -8,8 +8,8 @@
 <body> 
     <div class="mainpagefirstpage"> 
         <section>
-            <div class="slogan">
-                <h1 class="display-4"><strong>Quality and Affordable Products</strong></h1>
+            <div>
+                <h1 class="slogan">Quality and Affordable Products</h1>
             </div>
   
       </section>
