--- a/Y13TPIWebproject/Pages/Stationary.cshtml
+++ b/Y13TPIWebproject/Pages/Stationary.cshtml
@@ -4,6 +4,24 @@
     ViewData["Title"] = "Stationary Products";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Quality and Affordable Products</h1>
+<div class="mainpagestationary">
+         <div class="backgroundblur4 backgroundbrightness">
+                 <section class="container">
+                            <div class="text-center">
+                                <h1 class="display-4">Quality and Affordable Stationary</h1>
+                            </div>
+                                <div class="row">
+                                            <div class="card col-md-auto">
+                                              <img src="xxxx.jpg" alt="Some stationary" style="width:100%">
+                                              <h1>Some Stationary</h1>
+                                              <p class="price">$9.99</p>
+                                              <p>Some text about the the product..</p>
+                                              <p><button>Add to Cart</button></p>
+                                            </div>
+
+                                        
+                                          
+                                </div>
+                    </section>
+          </div>
 </div>
