--- a/Y13TPIWebproject/wwwroot/css/site.css
+++ b/Y13TPIWebproject/wwwroot/css/site.css
@@ -41,6 +41,10 @@ body {
     backdrop-filter: blur(20px);
 }
 
+.backgroundblur4 {
+    backdrop-filter: blur(5px) brightness(50%);
+}
+
 .scrollsnap {
     scroll-snap-type: y mandatory;
 }
@@ -109,3 +113,43 @@ h2 {
     font-size: 60px;
     font-family: 'Lato', sans-serif;
 }
+
+.card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    max-width: 300px;
+    margin: auto;
+    text-align: center;
+    font-family: arial;
+}
+
+.price {
+    color: grey;
+    font-size: 22px;
+}
+
+.card button {
+    border: none;
+    outline: 0;
+    padding: 12px;
+    color: white;
+    background-color: #000;
+    text-align: center;
+    cursor: pointer;
+    width: 100%;
+    font-size: 18px;
+}
+
+.card button:hover {
+        opacity: 0.7;
+}
+
+.float-container {
+    padding: 20px;
+}
+
+.float-child {
+    float: left;
+    padding: 20px;
+    margin-right: 20px;
+    
+}  
