--- a/Y13TPIWebproject/Pages/Toys.cshtml
+++ b/Y13TPIWebproject/Pages/Toys.cshtml
@@ -1,10 +1,68 @@
 ﻿@page
 @model Y13TPIWebproject.Pages.TechnologyModel
 @{
-    ViewData["Title"] = "Technology Products";
+    ViewData["Title"] = "Toy Products";
 }
 
-<div class="container-fluid">
-        <main role="main" class="pb-3">
-        </main>
-    </div>
+<div class="mainpagetoys">
+         <div class="backgroundblur5">
+
+                 <section class="container">
+                            <div class="text-center">
+                                <h1 class="display-4">Quality and Affordable Toys</h1>
+                            </div>
+                                <div class="row">
+                                            <div class="card col-auto">
+                                              <img src="xxxx.jpg" alt="Some stationary" style="width:100%">
+                                              <h1>Some Stationary</h1>
+                                              <p class="price">$9.99</p>
+                                              <p>Some text about the the product..</p>
+                                              <p><button>Add to Cart</button></p>
+                                            </div>
+                                            <div class="card col-auto">
+                                              <img src="xxxx.jpg" alt="Some stationary" style="width:100%">
+                                              <h1>Some Stationary</h1>
+                                              <p class="price">$9.99</p>
+                                              <p>Some text about the the product..</p>
+                                              <p><button>Add to Cart</button></p>
+                                            </div>
+                                     
+                                            <div class="card col-auto">
+                                              <img src="xxxx.jpg" alt="Some stationary" style="width:100%">
+                                              <h1>Some Stationary</h1>
+                                              <p class="price">$9.99</p>
+                                              <p>Some text about the the product..</p>
+                                              <p><button>Add to Cart</button></p>
+                                            </div>
+                                     
+                                            <div class="card col-auto">
+                                              <img src="xxxx.jpg" alt="Some stationary" style="width:100%">
+                                              <h1>Some Stationary</h1>
+                                              <p class="price">$9.99</p>
+                                              <p>Some text about the the product..</p>
+                                              <p><button>Add to Cart</button></p>
+                                            </div>
+                                     
+                                            <div class="card col-auto">
+                                              <img src="xxxx.jpg" alt="Some stationary" style="width:100%">
+                                              <h1>Some Stationary</h1>
+                                              <p class="price">$9.99</p>
+                                              <p>Some text about the the product..</p>
+                                              <p><button>Add to Cart</button></p>
+                                            </div>
+                                     <div class="card col-auto">
+                                              <img src="xxxx.jpg" alt="Some stationary" style="width:100%">
+                                              <h1>Some Stationary</h1>
+                                              <p class="price">$9.99</p>
+                                              <p>Some text about the the product..</p>
+                                              <p><button>Add to Cart</button></p>
+                                            </div>
+                                     
+                                     
+                                           
+                                        
+                                          
+                                </div>
+                    </section>
+          </div>
+</div>
