--- a/Y13TPIWebproject/wwwroot/css/site.css
+++ b/Y13TPIWebproject/wwwroot/css/site.css
@@ -45,6 +45,10 @@ body {
     backdrop-filter: blur(5px) brightness(50%);
 }
 
+.backgroundblur5 {
+    backdrop-filter: blur(5px) brightness(75%);
+}
+
 .scrollsnap {
     scroll-snap-type: y mandatory;
 }
@@ -117,7 +121,7 @@ h2 {
 .card {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     max-width: 300px;
-    margin: auto;
+    margin: 30px;
     text-align: center;
     font-family: arial;
 }
@@ -143,13 +147,3 @@ h2 {
         opacity: 0.7;
 }
 
-.float-container {
-    padding: 20px;
-}
-
-.float-child {
-    float: left;
-    padding: 20px;
-    margin-right: 20px;
-    
-}  
