Added stationery/toy products

--- a/Y13TPIWebproject/Pages/Index.cshtml
+++ b/Y13TPIWebproject/Pages/Index.cshtml
@@ -9,38 +9,32 @@
     <div class="mainpagefirstpage"> 
         <section>
             <div>
-                <h1 class="slogan">Quality and Affordable Products</h1>
+                <h1 class="slogan">Quality and Affordable<br />Products</h1>
             </div>
-  
       </section>
       
-     <div class="backgroundblur2 backgroundbrightness">
-         <section class="container mainpagestationary">
+         <div class="backgroundblur3">
+            <section class="container mainpagetoys">
+                <div class="container">
+                    <div class="bg-text">
+                        <h2>The best value toys for all your needs</h2>
+                    </div>
+                    <a class="btn btn-outline-secondary btn-lg button backgroundblur3" asp-area="" asp-page="/Toys">Go To Toys</a> 
+                </div>
+             </section>    
+          </div>
 
-            <div class="bg-text">
-                <h2>The best value stationary products for all your needs</h2>
-                
-            </div>
+         <div class="backgroundblur2 backgroundbrightness">
+             <section class="container mainpagestationary">
+
+                <div class="bg-text">
+                    <h2>The best value stationary products for all your needs</h2>
+                </div>
                 <a class="btn btn-outline-secondary btn-lg button backgroundblur2" asp-area="" asp-page="/Stationary">Go To Stationary</a> 
             
-         </section>
-      </div>
-
-      <div class="backgroundblur3">
-         <section class="container mainpagetoys">
-            <div class="container">
-                <div class="bg-text">
-                <h2>The best value toys for all your needs</h2>
-                
-            </div>
-                <a class="btn btn-outline-secondary btn-lg button backgroundblur3" asp-area="" asp-page="/Toys">Go To Toys</a> 
-            </div>
-         </section>    
-      </div>
-      
-   
-  
-    </div>
+             </section>
+         </div>
+     </div>
 </body>
 
 
