--- a/Y13TPIWebproject/Pages/Shared/_Layout.cshtml
+++ b/Y13TPIWebproject/Pages/Shared/_Layout.cshtml
@@ -7,13 +7,14 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Y13TPIWebproject.styles.css" asp-append-version="true" />
+    <link rel="icon" type="image/x-icon" href="~/Images/LogoY13TPIFavicon.png">
 </head>
 <body class="scrollsnap">
     <header class="sectionnavbar">
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow">
             <div class="container-fluid">
                 <a class="navbar-brand" asp-area="" asp-page="/Index">
-                    <img src="" alt="DuJia Imports" style="width:100px;height:50px;">
+                    <img src="~/Images/LogoY13TPI.png" alt="DuJia Imports" style="width:100px;height:50px;">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -25,7 +26,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Stationary">Stationary</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Stationary">Stationery</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Toys">Toys</a>
