added a cart page

--- a/Y13TPIWebproject/Pages/Toys.cshtml
+++ b/Y13TPIWebproject/Pages/Toys.cshtml
@@ -14,44 +14,44 @@
                                 <div class="row">
                                             <div class="card col-auto">
                                               <img src="https://img.alicdn.com/imgextra/i2/2116128192/O1CN01uBdB3z2ANzH9zh4x2_!!2116128192.jpg" alt="Goose" style="width:100%; height: 520px;">
-                                              <h1>Goose Plushie</h1>
+                                              <h1>Goose <br />Plushie</h1>
                                               <p class="price">$89.99</p>
-                                              <p>1.9m Goose</p>
+                                              <p>1.9m Goose<br /><br /></p>
                                               <p><button>Add to Cart</button></p>
                                             </div>
                                            <div class="card col-auto">
                                               <img src="https://img.alicdn.com/imgextra/i3/766568254/O1CN01jpkur22AqNmokqfBz_!!766568254.jpg" alt="Lego Flower Bouquet" style="width:100%; height: 520px;">
                                               <h1>Lego Flower Bouquet</h1>
                                               <p class="price">$80.99</p>
-                                              <p>Lego Flower Bouquet 10280</p>
+                                              <p>Lego Flower Bouquet 10280<br /><br /></p>
                                               <p><button>Add to Cart</button></p>
                                             </div>
                                             <div class="card col-auto">
                                               <img src="https://img.alicdn.com/imgextra/i2/122109916/O1CN01ZA9t9T2N7a04jK1S4_!!122109916.jpg" alt="6x6 car" style="width:100%; height: 520px;">
-                                              <h1>6x6 Model Car</h1>
+                                              <h1>6x6 <br />Model Car</h1>
                                               <p class="price">$19.99</p>
                                               <p>1/28 scale,aluminium construction, 20,4cm x 8.2cm x 6cm</p>
                                               <p><button>Add to Cart</button></p>
                                             </div>
                                             <div class="card col-auto">
                                               <img src="https://img.alicdn.com/imgextra/i4/2200659100688/O1CN01h7NPtd1Gx9EYlyFKM_!!2200659100688.jpg" alt="blaster" style="width:100%; height: 520px;">
-                                              <h1>Electric Blaster</h1>
+                                              <h1>Electric <br />Blaster</h1>
                                               <p class="price">$79.99</p>
                                               <p>2x battery packs, LED flashlight, scope, magazine</p>
                                               <p><button>Add to Cart</button></p>
                                             </div>
                                             <div class="card col-auto">
                                               <img src="https://img.alicdn.com/imgextra/i3/2209106264780/O1CN01yDa4Li1lBHvpGBMbf_!!0-item_pic.jpg_430x430q90.jpg" alt="drone" style="width:100%; height: 520px;">
-                                              <h1>QRI Drone</h1>
+                                              <h1>QRI <br />Drone</h1>
                                               <p class="price">$109.99</p>
-                                              <p>8K camera, 120mins flight time</p>
+                                              <p>8K camera, 120mins flight time<br /><br /></p>
                                               <p><button>Add to Cart</button></p>
                                             </div>
                                             <div class="card col-auto">
                                               <img src="https://img.alicdn.com/imgextra/i3/756423722/O1CN01PYMMV61dMilXfgh0q_!!0-item_pic.jpg_430x430q90.jpg" alt="wooden toys" style="width:100%; height: 520px;">
-                                              <h1>Wooden Toy Set</h1>
+                                              <h1>Wooden <br />Toy Set</h1>
                                               <p class="price">$34.99</p>
-                                              <p>13 piece set, organic wood</p>
+                                              <p>13 piece set, organic wood<br /><br /></p>
                                               <p><button>Add to Cart</button></p>
                                             </div>
                                             <div class="card col-auto">
@@ -63,7 +63,7 @@
                                             </div>
                                             <div class="card col-auto">
                                               <img src="https://img.alicdn.com/imgextra/i2/2073186249/O1CN01VH7nZy1w25gjm0Cyx_!!2073186249.jpg" alt="magnetic beads" style="width:100%; height: 520px;">
-                                              <h1>Colourful Magnetic Beads</h1>
+                                              <h1>Magnetic Beads</h1>
                                               <p class="price">$49.99</p>
                                               <p>1200 beads, 8 colour, diameter 5mm, 10x10x12</p>
                                               <p><button>Add to Cart</button></p>
